SONARTEXT-217 Automatic Test File Detection should only base the detection on the baseDir (#354)